--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>potheca</display-name>
+  <display-name>Apotheca</display-name>
   <description>description</description>
   <context-param>
     <description>my param</description>
@@ -18,12 +18,12 @@
     <listener-class>com.epam.jwd.apotheca.controller.MyContextAttributeListener</listener-class>
   </listener>
   <servlet>
-    <servlet-name>ABC</servlet-name>
+    <servlet-name>users</servlet-name>
     <servlet-class>com.epam.jwd.apotheca.controller.UserManager</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>ABC</servlet-name>
-    <url-pattern>/aaa</url-pattern>
+    <servlet-name>users</servlet-name>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>log</filter-name>
