--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,10 @@
     <servlet-name>users</servlet-name>
     <servlet-class>com.epam.jwd.apotheca.controller.UserManager</servlet-class>
   </servlet>
+  <servlet-mapping>
+    <servlet-name>users</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
   <filter>
     <filter-name>auth</filter-name>
     <filter-class>com.epam.jwd.apotheca.controller.AuthorizationFilter</filter-class>
