--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,11 @@
         <version>1.7.30</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-simple</artifactId>
-        <version>1.7.30</version>
-  	</dependency>
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-classic</artifactId>
+	    <version>1.2.5</version>
+
+	</dependency>
+ 
   </dependencies>
 </project>
