--- a/src/Menu_zh_CHINESE.properties
+++ b/src/Menu_zh_CHINESE.properties
@@ -7,3 +7,4 @@ menu.logon1=\u8ACB\u3002
 menu.logon2=\u767B\u5F55
 menu.logoff=\u6CE8\u9500
 menu.user=\u767B\u5F55\u7528\u6237
+menu.locale=\u66F4\u6539\u8BED\u8A00
