--- a/src/Orders_zh_CHINESE.properties
+++ b/src/Orders_zh_CHINESE.properties
@@ -1,3 +1,7 @@
 orders.title=\u7528\u6237\u8BA2\u5355
 orders.page=\u8BA2\u5355\u9875\u9762
 orders.list=\u8BA2\u5355\u5217\u8868
+orders.drug=\u836F\u7269
+orders.amount=\u91D1\u989D
+orders.date=\u65E5\u671F
+orders.absence=\u672A\u627E\u5230\u8BB0\u5F55
