--- a/src/Recipes_zh_CHINESE.properties
+++ b/src/Recipes_zh_CHINESE.properties
@@ -2,3 +2,7 @@ recipes.title=\u98DF\u8C31\u7531\u533B\u751F
 recipes.list=\u98DF\u8C31\u5217\u8868
 recipes.prompt=\u8F93\u5165\u533B\u751F\u59D3\u540D
 recipes.message=\u6CA1\u6709\u8FD9\u6837\u7684\u533B\u751F
+recipes.client=\u5BA2\u6237
+recipes.drug=\u836F\u7269
+recipes.dose=\u5242\u91CF
+recipes.date=\u5230\u671F\u65E5
