--- a/src/Index_zh_CHINESE.properties
+++ b/src/Index_zh_CHINESE.properties
@@ -1,2 +1,3 @@
 index.title=\u4F60\u597D\uFF01
 index.page=\u8D77\u59CB\u9875
+index.welcome=\u4F60\u597D\uFF01 \u6B22\u8FCE\u6765\u5230\u6211\u7684\u7F51\u7AD9\uFF01 \u5728\u8FD9\u91CC\u4F60\u53EF\u4EE5\u4E70\u6BD2\u54C1\u3002 \u8BF7\u4F7F\u7528\u4E0A\u9762\u7684\u83DC\u5355.
